# todo-app

./: Cargo.toml  api_schema.yml  config.json
migrations/: 20240607_create_table.sql
src/: config.rs  error.rs  lib.rs  main.rs
src/db/: db.rs  db_read_ops.rs  db_write_ops.rs  error.rs  mod.rs  todo.rs
src/routes/: mod.rs  todos.rs
src/utils/: constants.rs  helpers.rs  mod.rs  tracing.rs
tests/api/: alive.rs  helpers.rs  main.rs  todos.rs
