[package]
name = "todo-app"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features= ["full"] }
tokio-stream = "0.1"
futures-util = "0.3"
axum = { version = "0.7", features = ["macros"] }
chrono = { version = "0.4", features = ["serde"]}
tower-http = { version = "0.6", features = ["trace", "cors"] }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "json", "chrono", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15.7"

[dev-dependencies]
reqwest = { version = "0.11.26", features = ["json"] }
uuid = { version = "1", features = ["v4"] }